Need to see if this change fixes the font scaling on mobile.

--- a/less/wedding-page.less
+++ b/less/wedding-page.less
@@ -36,6 +36,7 @@ GENERAL STYLING
 * {
   margin: 0;
   font-family: @font-primary-font;
+  font-size: 1em;
 }
 
 body {
